[package]
name = "iroh-wnfs"
version = "0.1.3"
edition = "2021"
authors = ["b5 <sparkle_pony_2000@qri.io>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/n0-computer/iroh"
description = "Sharing files with iroh"
rust-version = "1.63"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.59"
base64 = "0.13.1"
bytes = "1.3.0"
chrono = "0.4.23"
cid = "0.9.0"
futures = "0.3.21"
iroh-api = { path = "../iroh-api" }
iroh-util = { path = "../iroh-util" }
iroh-resolver = { path = "../iroh-resolver" }
libipld = "0.15"
multihash = "0.17.0"
serde_json = "1.0.89"
tokio = { version = "1" }
wnfs = "0.1.9"
serde = "1.0.148"
ptree = "0.4.0"
async-recursion = "1.0.0"


[features]
default = []

